objects/ProvisionedFeature__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>displayname__c</fullName>
        <label>Display Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featurename__c</fullName>
        <label>Feature Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featurestate__c</fullName>
        <label>Feature State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemmodstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>